# email_op

./: .env-example  .gitignore  README.MD  manage.py  pyproject.toml  pytest.ini  rules-example.json
api/: urls.py  views.py
api/tests/: api_test.py  conftest.py
core/: models.py  processor.py
core/management/commands/: process.py
core/migrations/: 0001_initial.py
core/processor/: __init__.py  action.py  condition.py  email_processor.py  exception.py  rule.py
core/processor/process_executor/: __init__.py  gmail_executor.py
core/processor/search_engine/: __init__.py  db_search_engine.py
email_op/: asgi.py  settings.py  wsgi.py
loader/: loaders.py  models.py
loader/management/commands/: load.py
loader/migrations/: 0001_initial.py  0002_email_msg_id.py  0003_alter_email_from_email.py  0004_alter_email_msg_id.py  0005_delete_email.py
